--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+rand = "0.8.5"
+getrandom = { version = "0.2", features = ["js"] }
 wasm-bindgen = "0.2.86"
