--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ crate-type = ["cdylib"]
 rand = "0.8.5"
 getrandom = { version = "0.2", features = ["js"] }
 wasm-bindgen = "0.2.86"
+serde-wasm-bindgen = "0.5.0"
